@@ -47,6 +47,7 @@ fixed bugs:
 - fixed bug resulting in trying to delete an upgraded linear constraint a second time in exitpre callback
 - fixed bug in nlp diving heuristic for fractional variables with values slightly outside of their domain
 - set lpsolstat to SCIP_LPSOLSTAT_NOTSOLVED in SCIPchg{Lp,Dual}feastol
+- use tighter dual feasibility tolerance for LPs solved during optimization-based bound tightening
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
